--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@types/lodash": "^4.17.20",
+    "@types/node": "^24.10.2",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@typescript-eslint/eslint-plugin": "^8.38.0",
